Fix map height on Mobile Safari 7.0.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+.pushable > .pusher {
+  height: 100vh; /* necessary on Mobile Safari 7.0 */
+}
+
 td {
   padding-left: 0.5em;
   padding-bottom: 0.2em;
